Spec output
Created function to output system specification to text file at file location C:\KotaApp

File name: sysinfo.txt

Found under buttons -> Windows -> Spec